--- a/source/index.html
+++ b/source/index.html
@@ -10,41 +10,39 @@
   </head>
 
   <body>
-  <div class="header">
-      <div class="todo--logo">
-          <img src="image/Untitled%20design%20(16).png">
-      </div>
-      <div class="search--box">
-          <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="magnifying-glass" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="svg-inline--fa fa-magnifying-glass"><path fill="currentColor" d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z" class=""></path></svg>
-          <input class="search" type="text" placeholder="Search between tasks">
-      </div>
-  </div>
-
-  <div class="main">
-      <div class="todolist">
-          <form class="add text-center" autocomplete="off">
-              <label class="top--label">
-                  Tasks to do &#8595
-              </label>
-              <input type="text" class="form-control m-auto" name="add" placeholder="Add a new task"/>
-          </form>
-          <ul class="list-group all--tasks mx-auto text-light">
-          </ul>
-          <ul class="list-group done--tasks mx-auto text-light">
-          </ul>
-          <ul class="list-group undone--tasks mx-auto text-light">
-          </ul>
-          <ul class="list-group mx-auto text-light search--result"></ul>
-      </div>
-      <div class="category">
-          <div class="buttons--container">
-              <button class="all--btn">All</button>
-              <button class="done--btn">Done </button>
-              <button class="undone--btn">Undone</button>
+  <div class="site--container">
+      <div class="header">
+          <div class="todo--logo">
+              <img src="image/Untitled%20design%20(16).png">
           </div>
-          <img src="image/juggling-man.png" alt="Oops">
+          <div class="search--box">
+              <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="magnifying-glass" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="svg-inline--fa fa-magnifying-glass"><path fill="currentColor" d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z" class=""></path></svg>
+              <input class="search--input" type="text" placeholder="Search between tasks">
+          </div>
+      </div>
+      <div class="main">
+          <div class="todo--box">
+              <form class="add text-center" autocomplete="off">
+                  <label class="todo--label">
+                      Tasks to do &#8595
+                  </label>
+                  <input type="text" class="todo--input m-auto" name="add" placeholder="Add a new task"/>
+              </form>
+              <ul class="task--list list-group mx-auto text-light"></ul>
+              <ul class="search--list list-group mx-auto text-light"></ul>
+          </div>
+          <div class="filter">
+              <div class="filter__buttons">
+                  <button class="all--btn">All</button>
+                  <button class="done--btn">Done </button>
+                  <button class="undone--btn">Undone</button>
+              </div>
+              <div class="filter__logo">
+                  <img src="image/juggling-man.png" alt="Oops">
+              </div>
+          </div>
       </div>
   </div>
-      <script src="js/betterScript.js"></script>
+  <script src="js/betterScript.js"></script>
   </body>
 </html>
