feat: added edit to tasks

--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@
   <div class="site--container">
       <div class="header">
           <div class="todo--logo">
-              <img src="image/Untitled%20design%20(16).png">
+              <img src="image/sticky-man.png">
           </div>
           <div class="search--box">
               <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="magnifying-glass" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="svg-inline--fa fa-magnifying-glass"><path fill="currentColor" d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z" class=""></path></svg>
@@ -24,11 +24,13 @@
           <div class="todo--box">
               <form class="add text-center" autocomplete="off">
                   <label class="todo--label">
-                      Tasks to do &#8595
+                      To do &#8595
                   </label>
                   <input type="text" class="todo--input m-auto" name="add" placeholder="Add a new task"/>
+                  <i class="fa-solid fa-pen-to-square"></i>
               </form>
-              <ul class="task--list list-group mx-auto text-light"></ul>
+              <ul class="task--list list-group mx-auto text-light">
+              </ul>
               <ul class="search--list list-group mx-auto text-light"></ul>
           </div>
           <div class="filter">
@@ -43,6 +45,6 @@
           </div>
       </div>
   </div>
-  <script src="js/betterScript.js"></script>
+  <script src="js/script.js"></script>
   </body>
 </html>
